feat: allow models to specify database connection

--- a/.env.example
+++ b/.env.example
@@ -48,7 +48,7 @@ DYNAMODB_ENDPOINT=
 CACHE_PREFIX=animethemes
 
 # database
-DB_CONNECTION=mysql
+DB_CONNECTION=mysql_prod
 DATABASE_URL=
 DB_HOST_READ=127.0.0.1
 DB_HOST_WRITE=127.0.0.1
@@ -59,6 +59,14 @@ DB_USERNAME=root
 DB_PASSWORD=
 DB_SOCKET=
 MYSQL_ATTR_SSL_CA=null
+
+DATABASE_BETA_URL=
+DB_BETA_HOST=
+DB_BETA_PORT=3306
+DB_BETA_DATABASE=laravel
+DB_BETA_USERNAME=root
+DB_BETA_PASSWORD=
+DB_BETA_SOCKET=
 
 REDIS_CLIENT=predis
 REDIS_CLUSTER=redis
