--- a/.env.example
+++ b/.env.example
@@ -251,6 +251,11 @@ POSTMARK_TOKEN=
 DISCORD_BOT_API_TOKEN=
 DB_UPDATES_DISCORD_CHANNEL=
 ADMIN_DISCORD_CHANNEL=
+SUBMISSIONS_DISCORD_CHANNEL=
+WINTER_DISCORD_FORUM_TAG=
+SPRING_DISCORD_FORUM_TAG=
+SUMMER_DISCORD_FORUM_TAG=
+FALL_DISCORD_FORUM_TAG= 
 MAL_CLIENT_ID=null
 DO_BEARER_TOKEN=null
 OPENAI_BEARER_TOKEN=null
