--- a/.env.example-sail
+++ b/.env.example-sail
@@ -50,13 +50,14 @@ CACHE_PREFIX=animethemes
 # database
 DB_CONNECTION=mysql_prod
 DATABASE_URL=
-DB_HOST_READ=127.0.0.1
-DB_HOST_WRITE=127.0.0.1
+DB_HOST=mysql
+DB_HOST_READ=mysql
+DB_HOST_WRITE=mysql
 DB_STICKY=false
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sail
+DB_PASSWORD=password
 DB_SOCKET=
 MYSQL_ATTR_SSL_CA=null
 
@@ -71,7 +72,7 @@ DB_BETA_SOCKET=
 REDIS_CLIENT=predis
 REDIS_CLUSTER=redis
 REDIS_URL=null
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 REDIS_SCHEME=tcp
@@ -86,7 +87,7 @@ DUMP_PATH=
 
 # elastic client
 ELASTIC_CONNECTION=default
-ELASTIC_HOST=http://localhost:9200
+ELASTIC_HOST=http://elasticsearch:9200
 
 # elastic driver
 ELASTIC_SCOUT_DRIVER_REFRESH_DOCUMENTS=false
@@ -166,7 +167,7 @@ SCRIPT_DISABLE_ASSERTS=
 SCRIPT_VISIBILITY=
 
 # fortify
-FORTIFY_HOME=http://localhost
+FORTIFY_HOME=http://localhost:3000
 FORTIFY_PATH=
 FORTIFY_URL=http://localhost
 
@@ -195,14 +196,14 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 # mail
-MAIL_MAILER=log
-MAIL_HOST=smtp.mailgun.org
-MAIL_PORT=587
+MAIL_MAILER=smtp
+MAIL_HOST=mailpit
+MAIL_PORT=1025
 MAIL_ENCRYPTION=tls
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS=admin@animethemes.moe
+MAIL_FROM_NAME=AnimeThemes
 MAIL_SENDMAIL_PATH="/usr/sbin/sendmail -bs -i"
 MAIL_LOG_CHANNEL=
 
@@ -226,10 +227,10 @@ REDIS_QUEUE=default
 QUEUE_FAILED_DRIVER=database-uuids
 
 # sanctum
-SANCTUM_STATEFUL_DOMAINS=
+SANCTUM_STATEFUL_DOMAINS=*
 
 # scout
-SCOUT_DRIVER=null
+SCOUT_DRIVER=elastic
 SCOUT_PREFIX=
 SCOUT_QUEUE=false
 SCOUT_IDENTIFY=false
