--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
     "require-dev": {
         "brianium/paratest": "^7.0",
         "laravel/pint": "^1.6",
+        "laravel/sail": "^1.28",
         "mockery/mockery": "^1.5.1",
         "nunomaduro/collision": "^7.0",
         "nunomaduro/larastan": "^2.4",
