feat: external profile middlewares

--- a/.env.example
+++ b/.env.example
@@ -94,6 +94,10 @@ ELASTIC_SCOUT_DRIVER_REFRESH_DOCUMENTS=false
 # elastic migrations
 ELASTIC_MIGRATIONS_TABLE=elastic_migrations
 
+# external profile
+PROFILE_MAX_ENTRIES=1000
+USER_MAX_PROFILES=5
+
 # ffmpeg
 FFMPEG_BINARIES=
 FFPROBE_BINARIES=
