--- a/.env.example
+++ b/.env.example
@@ -98,6 +98,9 @@ ELASTIC_MIGRATIONS_TABLE=elastic_migrations
 FFMPEG_BINARIES=
 FFPROBE_BINARIES=
 
+# filament
+FILAMENT_PATH=/admin
+
 # filesystems
 FILESYSTEM_DISK=local
 
@@ -211,7 +214,7 @@ NOVA_DOMAIN_NAME=null
 NOVA_GUARD=null
 NOVA_LICENSE_KEY=
 NOVA_PASSWORDS=null
-NOVA_PATH=/admin
+NOVA_PATH=/nova
 
 # pennant
 PENNANT_STORE=database
