feat: added livewire config

--- a/.env.example-sail
+++ b/.env.example-sail
@@ -99,6 +99,10 @@ ELASTIC_MIGRATIONS_TABLE=elastic_migrations
 FFMPEG_BINARIES=
 FFPROBE_BINARIES=
 
+# filament
+FILAMENT_DOMAIN_NAME=
+FILAMENT_PATH=/admin
+
 # filesystems
 FILESYSTEM_DISK=local
 
