fix: added dump path

--- a/.env.example-sail
+++ b/.env.example-sail
@@ -83,7 +83,7 @@ REDIS_CACHE_DB=1
 DUMP_DISK=dumps
 DUMP_DISK_ROOT=
 DUMP_URL=http://localhost
-DUMP_PATH=
+DUMP_PATH=/dump
 
 # elastic client
 ELASTIC_CONNECTION=default
