--- a/phpstan.neon
+++ b/phpstan.neon
@@ -21,3 +21,6 @@ parameters:
         - '#Call to an undefined method Mockery\\ExpectationInterface|Mockery\\HigherOrderMessage::once\(\).#'
         - '#Strict comparison using === between class-string<Laravel\\Nova\\Resource> and null will always evaluate to false.#'
         - '#Call to an undefined method Database\\Factories.*::trashed\(\).#'
+        -
+            message: '#Call to an undefined static method App\\Models\\BaseModel::search\(\).#'
+            path: app/Filament/Components/Fields/Select.php
