feat(filament): added dashboads & charts

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "fakerphp/faker": "^1.21",
         "filament/filament": "3.2",
         "filament/forms": "3.2",
+        "flowframe/laravel-trend": "*",
         "guzzlehttp/guzzle": "^7.5",
         "laravel-notification-channels/discord": "^1.4",
         "laravel/fortify": "^1.16",
@@ -43,6 +44,7 @@
         "laravel/telescope": "^4.12",
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "leandrocfe/filament-apex-charts": "3.1",
         "propaganistas/laravel-disposable-email": "^2.2",
         "spatie/db-dumper": "^3.1.1",
         "spatie/laravel-permission": "^5.8",
