refactor: discord bot integration

--- a/.env.example
+++ b/.env.example
@@ -253,13 +253,9 @@ MAILGUN_SECRET=
 MAILGUN_ENDPOINT=api.mailgun.net
 POSTMARK_TOKEN=
 DISCORD_BOT_API_TOKEN=
+DISCORD_BOT_API_URL=
 DB_UPDATES_DISCORD_CHANNEL=
 ADMIN_DISCORD_CHANNEL=
-SUBMISSIONS_DISCORD_CHANNEL=
-WINTER_DISCORD_FORUM_TAG=
-SPRING_DISCORD_FORUM_TAG=
-SUMMER_DISCORD_FORUM_TAG=
-FALL_DISCORD_FORUM_TAG=
 MAL_CLIENT_ID=null
 OPENAI_BEARER_TOKEN=null
 
