feat: added discord bot api key

--- a/.env.example-sail
+++ b/.env.example-sail
@@ -255,6 +255,7 @@ MAILGUN_ENDPOINT=api.mailgun.net
 POSTMARK_TOKEN=
 DISCORD_BOT_API_TOKEN=
 DISCORD_BOT_API_URL=
+DISCORD_BOT_API_KEY=
 DB_UPDATES_DISCORD_CHANNEL=
 ADMIN_DISCORD_CHANNEL=
 MAL_CLIENT_ID=null
