--- a/phpstan.neon
+++ b/phpstan.neon
@@ -25,3 +25,6 @@ parameters:
             message: '#Call to an undefined static method App\\Models\\BaseModel::search\(\).#'
             path: app/Filament/Components/Fields/Select.php
         - '#::mapWithKeys\(\) expects*non-empty-array<int|string, string> given.#'
+        -
+            message: '#Right side of && is always true.#'
+            path: app\Providers\RouteServiceProvider.php
