--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.0",
         "leandrocfe/filament-apex-charts": "3.1",
+        "malzariey/filament-daterangepicker-filter": "^2.7",
         "propaganistas/laravel-disposable-email": "^2.2",
         "spatie/db-dumper": "^3.1.1",
         "spatie/laravel-permission": "^5.8",
