--- a/phpstan.neon
+++ b/phpstan.neon
@@ -39,3 +39,6 @@ parameters:
         -
             message: '#Call to an undefined method App\\Models\\BaseModel::images\(\)#'
             path: app/Actions/Models/BackfillWikiAction.php
+        -
+            message: '#Call to an undefined method App\\Models\\BaseModel::images\(\)#'
+            path: app/Concerns/Models/CanCreateImage.php
