--- a/composer.json
+++ b/composer.json
@@ -57,11 +57,11 @@
     },
     "require-dev": {
         "brianium/paratest": "^7.0",
+        "larastan/larastan": "^2.9",
         "laravel/pint": "^1.6",
         "laravel/sail": "^1.28",
         "mockery/mockery": "^1.5.1",
         "nunomaduro/collision": "^7.0",
-        "nunomaduro/larastan": "^2.4",
         "phpunit/phpunit": "^10.1",
         "predis/predis": "^2.0",
         "spatie/laravel-ignition": "^2.0"
