--- a/.env.example
+++ b/.env.example
@@ -79,7 +79,7 @@ REDIS_DB=0
 REDIS_CACHE_DB=1
 
 # dump
-DUMP_DISK=dumps
+DUMP_DISK=dumps_local
 DUMP_DISK_ROOT=
 DUMP_URL=http://localhost
 DUMP_PATH=/dump
