--- a/composer.json
+++ b/composer.json
@@ -30,30 +30,30 @@
         "bezhansalleh/filament-exceptions": "^2.1",
         "cyrildewit/eloquent-viewable": "^7.0",
         "fakerphp/faker": "^1.21",
-        "filament/filament": "3.2.99",
-        "filament/forms": "3.2.99",
+        "filament/filament": "^3.2.102",
+        "filament/forms": "^3.2.102",
         "flowframe/laravel-trend": "*",
         "guzzlehttp/guzzle": "^7.5",
         "laravel-notification-channels/discord": "^1.4",
         "laravel/fortify": "^1.16",
-        "laravel/framework": "^10.10",
+        "laravel/framework": "^11.20",
         "laravel/horizon": "^5.12",
         "laravel/pennant": "^1.2",
-        "laravel/sanctum": "^3.2",
+        "laravel/sanctum": "^4.0",
         "laravel/scout": "^10.0",
-        "laravel/telescope": "^4.12",
+        "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.0",
-        "leandrocfe/filament-apex-charts": "3.1",
+        "leandrocfe/filament-apex-charts": "^3.1",
         "malzariey/filament-daterangepicker-filter": "^2.7",
         "propaganistas/laravel-disposable-email": "^2.2",
         "spatie/db-dumper": "^3.1.1",
-        "spatie/laravel-permission": "^5.8",
+        "spatie/laravel-permission": "^6.0",
         "staudenmeir/belongs-to-through": "^2.13",
         "staudenmeir/laravel-adjacency-list": "^1.13",
         "symfony/http-client": "^6.0",
         "symfony/mailgun-mailer": "^6.0",
-        "vinkla/hashids": "^11.0"
+        "vinkla/hashids": "^12.0"
     },
     "require-dev": {
         "brianium/paratest": "^7.0",
@@ -61,7 +61,7 @@
         "laravel/pint": "^1.6",
         "laravel/sail": "^1.28",
         "mockery/mockery": "^1.5.1",
-        "nunomaduro/collision": "^7.0",
+        "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "^10.1",
         "predis/predis": "^2.0",
         "spatie/laravel-ignition": "^2.0"
