--- a/.env.example-sail
+++ b/.env.example-sail
@@ -251,8 +251,13 @@ DISCORD_BOT_API_URL=
 DISCORD_BOT_API_KEY=
 DB_UPDATES_DISCORD_CHANNEL=
 ADMIN_DISCORD_CHANNEL=
-MAL_CLIENT_ID=null
 OPENAI_BEARER_TOKEN=null
+MAL_CLIENT_ID=null
+MAL_CLIENT_SECRET=null
+MAL_REDIRECT_URI=null
+ANILIST_CLIENT_ID=null
+ANILIST_CLIENT_SECRET=null
+ANILIST_REDIRECT_URI=null
 
 # session
 SESSION_DRIVER=database
@@ -292,3 +297,4 @@ WEB_PATH=
 # wiki
 WIKI_LOGIN=http://localhost/login
 WIKI_RESET_PASSWORD=http://localhost/reset-password
+WIKI_EXTERNAL_PROFILE=http://localhost/external
