--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "ext-gd": "*",
         "ext-intl": "*",
         "ext-pdo": "*",
+        "awcodes/recently": "^1.0",
         "babenkoivan/elastic-migrations": "^3.3",
         "babenkoivan/elastic-scout-driver-plus": "^4.3",
         "bepsvpt/secure-headers": "^7.4",
