--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,8 @@
         "bezhansalleh/filament-exceptions": "^2.1",
         "cyrildewit/eloquent-viewable": "^7.0",
         "fakerphp/faker": "^1.21",
-        "filament/filament": "^3.2.110",
-        "filament/forms": "^3.2.110",
+        "filament/filament": "^3.2.114",
+        "filament/forms": "^3.2.114",
         "flowframe/laravel-trend": "*",
         "guzzlehttp/guzzle": "^7.5",
         "laravel-notification-channels/discord": "^1.4",
@@ -46,7 +46,7 @@
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.0",
         "leandrocfe/filament-apex-charts": "^3.1",
-        "malzariey/filament-daterangepicker-filter": "^3.0.4",
+        "malzariey/filament-daterangepicker-filter": "2.7",
         "propaganistas/laravel-disposable-email": "^2.2",
         "spatie/db-dumper": "^3.1.1",
         "spatie/laravel-permission": "^6.0",
