--- a/.env.example-sail
+++ b/.env.example-sail
@@ -6,6 +6,8 @@ API_URL=
 APP_NAME=AnimeThemes
 APP_ENV=local
 APP_DEBUG=true
+DEBUGBAR_ENABLED=true
+DEBUGBAR_EDITOR=
 APP_URL=http://localhost
 ASSET_URL=null
 APP_KEY=
