--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
         "vinkla/hashids": "^12.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.14",
         "brianium/paratest": "^7.0",
         "larastan/larastan": "^2.9",
         "laravel/pint": "^1.6",
