--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "laravel/framework": "^11.21",
         "laravel/horizon": "^5.12",
         "laravel/pennant": "^1.2",
+        "laravel/pulse": "^1.2",
         "laravel/sanctum": "^4.0",
         "laravel/scout": "^10.0",
         "laravel/telescope": "^5.0",
