feat: added laravel pulse (#757)

--- a/composer.json
+++ b/composer.json
@@ -40,9 +40,9 @@
         "laravel/framework": "^11.21",
         "laravel/horizon": "^5.12",
         "laravel/pennant": "^1.2",
+        "laravel/pulse": "^1.2",
         "laravel/sanctum": "^4.0",
         "laravel/scout": "^10.0",
-        "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.0",
         "leandrocfe/filament-apex-charts": "^3.1",
