--- a/composer.json
+++ b/composer.json
@@ -24,49 +24,49 @@
         "ext-gd": "*",
         "ext-intl": "*",
         "ext-pdo": "*",
-        "awcodes/recently": "^1.0",
-        "babenkoivan/elastic-migrations": "^3.3",
-        "babenkoivan/elastic-scout-driver-plus": "^4.3",
-        "bepsvpt/secure-headers": "^7.4",
-        "bezhansalleh/filament-exceptions": "^2.1",
-        "cyrildewit/eloquent-viewable": "^7.0",
-        "fakerphp/faker": "^1.21",
-        "filament/filament": "^3.2.115",
-        "filament/forms": "^3.2.115",
-        "flowframe/laravel-trend": "*",
-        "guzzlehttp/guzzle": "^7.5",
-        "laravel-notification-channels/discord": "^1.4",
-        "laravel/fortify": "^1.16",
-        "laravel/framework": "^11.21",
-        "laravel/horizon": "^5.12",
-        "laravel/pennant": "^1.2",
-        "laravel/pulse": "^1.2",
-        "laravel/sanctum": "^4.0",
-        "laravel/scout": "^10.0",
-        "laravel/tinker": "^2.8",
-        "league/flysystem-aws-s3-v3": "^3.0",
-        "leandrocfe/filament-apex-charts": "^3.1",
+        "awcodes/recently": "^1.0.6",
+        "babenkoivan/elastic-migrations": "^3.4.1",
+        "babenkoivan/elastic-scout-driver-plus": "^4.8",
+        "bepsvpt/secure-headers": "^7.5",
+        "bezhansalleh/filament-exceptions": "^2.1.2",
+        "cyrildewit/eloquent-viewable": "^7.0.3",
+        "fakerphp/faker": "^1.24",
+        "filament/filament": "^3.2.124",
+        "filament/forms": "^3.2.124",
+        "flowframe/laravel-trend": ">=0.3",
+        "guzzlehttp/guzzle": "^7.9.2",
+        "laravel-notification-channels/discord": "^1.6",
+        "laravel/fortify": "^1.24.5",
+        "laravel/framework": "^11.32",
+        "laravel/horizon": "^5.29.3",
+        "laravel/pennant": "^1.13",
+        "laravel/pulse": "^1.2.6",
+        "laravel/sanctum": "^4.0.3",
+        "laravel/scout": "^10.11.7",
+        "laravel/tinker": "^2.10",
+        "league/flysystem-aws-s3-v3": "^3.29",
+        "leandrocfe/filament-apex-charts": "^3.1.4",
         "malzariey/filament-daterangepicker-filter": "2.7",
-        "propaganistas/laravel-disposable-email": "^2.2",
-        "spatie/db-dumper": "^3.1.1",
-        "spatie/laravel-permission": "^6.0",
-        "staudenmeir/belongs-to-through": "^2.13",
-        "staudenmeir/laravel-adjacency-list": "^1.13",
-        "symfony/http-client": "^6.0",
-        "symfony/mailgun-mailer": "^6.0",
+        "propaganistas/laravel-disposable-email": "^2.4.7",
+        "spatie/db-dumper": "^3.7.0",
+        "spatie/laravel-permission": "^6.10.1",
+        "staudenmeir/belongs-to-through": "^2.16.2",
+        "staudenmeir/laravel-adjacency-list": "^1.23.1",
+        "symfony/http-client": "^6.4.15",
+        "symfony/mailgun-mailer": "^6.4.13",
         "vinkla/hashids": "^12.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.14",
-        "brianium/paratest": "^7.0",
-        "larastan/larastan": "^2.9",
-        "laravel/pint": "^1.6",
-        "laravel/sail": "^1.28",
-        "mockery/mockery": "^1.5.1",
-        "nunomaduro/collision": "^8.1",
-        "phpunit/phpunit": "^10.1",
-        "predis/predis": "^2.0",
-        "spatie/laravel-ignition": "^2.0"
+        "barryvdh/laravel-debugbar": "^3.14.7",
+        "brianium/paratest": "^7.4.8",
+        "larastan/larastan": "^2.9.11",
+        "laravel/pint": "^1.18.1",
+        "laravel/sail": "^1.38",
+        "mockery/mockery": "^1.6.12",
+        "nunomaduro/collision": "^8.5",
+        "phpunit/phpunit": "^10.5.38",
+        "predis/predis": "^2.2.2",
+        "spatie/laravel-ignition": "^2.8"
     },
     "config": {
         "optimize-autoloader": true,
