chore: bump dependencies

--- a/composer.json
+++ b/composer.json
@@ -31,20 +31,20 @@
         "bezhansalleh/filament-exceptions": "^2.1.2",
         "cyrildewit/eloquent-viewable": "^7.0.3",
         "fakerphp/faker": "^1.24.1",
-        "filament/filament": "^3.2.128",
-        "filament/forms": "^3.2.128",
+        "filament/filament": "^3.2.129",
+        "filament/forms": "^3.2.129",
         "flowframe/laravel-trend": ">=0.3",
         "guzzlehttp/guzzle": "^7.9.2",
         "laravel-notification-channels/discord": "^1.6",
-        "laravel/fortify": "^1.25.0",
-        "laravel/framework": "^11.34.2",
-        "laravel/horizon": "^5.29.4",
+        "laravel/fortify": "^1.25.1",
+        "laravel/framework": "^11.35.0",
+        "laravel/horizon": "^5.30.0",
         "laravel/pennant": "^1.13",
-        "laravel/pulse": "^1.2.7",
-        "laravel/sanctum": "^4.0.5",
-        "laravel/scout": "^10.11.8",
+        "laravel/pulse": "^1.3.0",
+        "laravel/sanctum": "^4.0.6",
+        "laravel/scout": "^10.11.9",
         "laravel/tinker": "^2.10",
-        "league/flysystem-aws-s3-v3": "3.0",
+        "league/flysystem-aws-s3-v3": "^3.29",
         "leandrocfe/filament-apex-charts": "^3.1.4",
         "malzariey/filament-daterangepicker-filter": "2.7",
         "propaganistas/laravel-disposable-email": "^2.4.8",
@@ -64,7 +64,7 @@
         "laravel/sail": "^1.39.1",
         "mockery/mockery": "^1.6.12",
         "nunomaduro/collision": "^8.5",
-        "phpunit/phpunit": "^10.5.38",
+        "phpunit/phpunit": "^10.5.39",
         "predis/predis": "^2.3.0",
         "spatie/laravel-ignition": "^2.9"
     },
