feat: user exceeds report limit middleware & allow report feature flag & report factories and tests

--- a/.env.example-sail
+++ b/.env.example-sail
@@ -225,6 +225,9 @@ QUEUE_CONNECTION=sync
 REDIS_QUEUE=default
 QUEUE_FAILED_DRIVER=database-uuids
 
+# report
+USER_MAX_REPORTS=50
+
 # sanctum
 SANCTUM_STATEFUL_DOMAINS=*
 
