--- a/phpstan.neon
+++ b/phpstan.neon
@@ -28,3 +28,4 @@ parameters:
         - '#Call to an undefined method Mockery\\ExpectationInterface|Mockery\\HigherOrderMessage::once\(\).#'
         - '#Call to an undefined method Database\\Factories.*::trashed\(\).#'
         - '#::mapWithKeys\(\) expects*non-empty-array<int\|string, string> given.#'
+        - '#Access to an undefined property App\\Models\\Wiki\\Artist::\$pivot.#'
