refactor: removed date range picker filter plugin

--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,8 @@
         "bezhansalleh/filament-exceptions": "^2.1.2",
         "cyrildewit/eloquent-viewable": "^7.0.5",
         "fakerphp/faker": "^1.24.1",
-        "filament/filament": "^3.3.8",
-        "filament/forms": "^3.3.8",
+        "filament/filament": "3.3",
+        "filament/forms": "3.3",
         "flowframe/laravel-trend": ">=0.4",
         "guzzlehttp/guzzle": "^7.9.3",
         "larastan/larastan": "^3.3.1",
@@ -47,7 +47,6 @@
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.29",
         "leandrocfe/filament-apex-charts": "^3.2.0",
-        "malzariey/filament-daterangepicker-filter": "^3.2.3",
         "propaganistas/laravel-disposable-email": "^2.4.13",
         "spatie/db-dumper": "^3.8.0",
         "spatie/laravel-permission": "^6.16.0",
