--- a/composer.json
+++ b/composer.json
@@ -29,44 +29,43 @@
         "babenkoivan/elastic-scout-driver-plus": "^4.8",
         "bepsvpt/secure-headers": "^7.5",
         "bezhansalleh/filament-exceptions": "^2.1.2",
-        "cyrildewit/eloquent-viewable": "^7.0.3",
+        "cyrildewit/eloquent-viewable": "^7.0.5",
         "fakerphp/faker": "^1.24.1",
-        "filament/filament": "^3.2.132",
-        "filament/forms": "^3.2.132",
-        "flowframe/laravel-trend": ">=0.3",
-        "guzzlehttp/guzzle": "^7.9.2",
-        "laravel-notification-channels/discord": "^1.6",
-        "laravel/fortify": "^1.25.1",
-        "laravel/framework": "^11.37.0",
-        "laravel/horizon": "^5.30.1",
-        "laravel/pennant": "^1.14",
-        "laravel/pulse": "^1.3.2",
-        "laravel/sanctum": "^4.0.7",
-        "laravel/scout": "^10.11.9",
-        "laravel/tinker": "^2.10",
+        "filament/filament": "3.3.7",
+        "filament/forms": "3.3.7",
+        "flowframe/laravel-trend": ">=0.4",
+        "guzzlehttp/guzzle": "^7.9.3",
+        "larastan/larastan": "^3.3.1",
+        "laravel-notification-channels/discord": "^1.7",
+        "laravel/fortify": "^1.25.4",
+        "laravel/framework": "^12.7.2",
+        "laravel/horizon": "^5.31.1",
+        "laravel/pennant": "^1.16.1",
+        "laravel/pulse": "^1.4.1",
+        "laravel/sanctum": "^4.0.8",
+        "laravel/scout": "^10.14.1",
+        "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.29",
-        "leandrocfe/filament-apex-charts": "^3.1.5",
-        "malzariey/filament-daterangepicker-filter": "2.7",
-        "propaganistas/laravel-disposable-email": "^2.4.9",
-        "spatie/db-dumper": "^3.7.1",
-        "spatie/laravel-permission": "^6.10.1",
-        "staudenmeir/belongs-to-through": "^2.16.2",
-        "staudenmeir/laravel-adjacency-list": "^1.23.1",
-        "symfony/http-client": "^6.4.17",
+        "leandrocfe/filament-apex-charts": "^3.2.0",
+        "propaganistas/laravel-disposable-email": "^2.4.13",
+        "spatie/db-dumper": "^3.8.0",
+        "spatie/laravel-permission": "^6.16.0",
+        "staudenmeir/belongs-to-through": "^2.17",
+        "staudenmeir/laravel-adjacency-list": "^1.24",
+        "symfony/http-client": "^6.4.19",
         "symfony/mailgun-mailer": "^6.4.13",
-        "vinkla/hashids": "^12.0"
+        "vinkla/hashids": "^13.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.14.10",
-        "brianium/paratest": "^7.4.8",
-        "larastan/larastan": "^3.0.2",
-        "laravel/pint": "^1.19.0",
-        "laravel/sail": "^1.39.1",
+        "barryvdh/laravel-debugbar": "^3.15.2",
+        "brianium/paratest": "^7.8.3",
+        "laravel/pint": "^1.21.2",
+        "laravel/sail": "^1.41.0",
         "mockery/mockery": "^1.6.12",
-        "nunomaduro/collision": "^8.5",
-        "phpunit/phpunit": "^10.5.40",
+        "nunomaduro/collision": "^8.8",
+        "phpunit/phpunit": "^11.5.15",
         "predis/predis": "^2.3.0",
-        "spatie/laravel-ignition": "^2.9"
+        "spatie/laravel-ignition": "^2.9.1"
     },
     "config": {
         "optimize-autoloader": true,
