feat: added schemas, enum type and localized enum directive

--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,9 @@
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.29",
         "leandrocfe/filament-apex-charts": "^3.2.0",
+        "mll-lab/graphql-php-scalars": "^6.4",
+        "mll-lab/laravel-graphiql": "^3.3",
+        "nuwave/lighthouse": "^6.54",
         "propaganistas/laravel-disposable-email": "^2.4.13",
         "spatie/db-dumper": "^3.8.0",
         "spatie/laravel-permission": "^6.16.0",
