feat: added path/domain & complexity/depth limit

--- a/.env.example
+++ b/.env.example
@@ -198,6 +198,13 @@ IMAGE_DISK_ROOT=
 JETSTREAM_PATH=
 JETSTREAM_URL=http://localhost
 
+# lighthouse
+GRAPHQL_DOMAIN_NAME=
+GRAPHQL_PATH=/graphql
+LIGHTHOUSE_DEBUG=true
+LIGHTHOUSE_MAX_QUERY_COMPLEXITY=100
+LIGHTHOUSE_MAX_QUERY_DEPTH=10
+
 # logging
 LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
