feat: publish graphiql config

--- a/.env.example
+++ b/.env.example
@@ -201,6 +201,7 @@ JETSTREAM_URL=http://localhost
 # lighthouse
 GRAPHQL_DOMAIN_NAME=
 GRAPHQL_PATH=/graphql
+GRAPHIQL_ENDPOINT=/graphiql
 LIGHTHOUSE_DEBUG=true
 LIGHTHOUSE_MAX_QUERY_COMPLEXITY=100
 LIGHTHOUSE_MAX_QUERY_DEPTH=10
