--- a/composer.json
+++ b/composer.json
@@ -29,45 +29,45 @@
         "babenkoivan/elastic-scout-driver-plus": "^4.8",
         "bepsvpt/secure-headers": "^7.5",
         "bezhansalleh/filament-exceptions": "^2.1.2",
-        "cyrildewit/eloquent-viewable": "^7.0.5",
+        "cyrildewit/eloquent-viewable": "^7.0.6",
         "fakerphp/faker": "^1.24.1",
-        "filament/filament": "3.3.7",
-        "filament/forms": "3.3.7",
+        "filament/filament": "^3.3.14",
+        "filament/forms": "^3.3.14",
         "flowframe/laravel-trend": ">=0.4",
         "guzzlehttp/guzzle": "^7.9.3",
-        "larastan/larastan": "^3.3.1",
+        "larastan/larastan": "^3.4.0",
         "laravel-notification-channels/discord": "^1.7",
         "laravel/fortify": "^1.25.4",
-        "laravel/framework": "^12.7.2",
-        "laravel/horizon": "^5.31.1",
+        "laravel/framework": "^12.13.0",
+        "laravel/horizon": "^5.31.2",
         "laravel/pennant": "^1.16.1",
         "laravel/pulse": "^1.4.1",
-        "laravel/sanctum": "^4.0.8",
+        "laravel/sanctum": "^4.1.1",
         "laravel/scout": "^10.14.1",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.29",
         "leandrocfe/filament-apex-charts": "^3.2.0",
         "mll-lab/graphql-php-scalars": "^6.4",
-        "mll-lab/laravel-graphiql": "^3.3",
-        "nuwave/lighthouse": "^6.54",
-        "propaganistas/laravel-disposable-email": "^2.4.13",
+        "mll-lab/laravel-graphiql": "^3.3.3",
+        "nuwave/lighthouse": "^6.56",
+        "propaganistas/laravel-disposable-email": "^2.4.14",
         "spatie/db-dumper": "^3.8.0",
-        "spatie/laravel-permission": "^6.16.0",
+        "spatie/laravel-permission": "^6.17.0",
         "staudenmeir/belongs-to-through": "^2.17",
-        "staudenmeir/laravel-adjacency-list": "^1.24",
+        "staudenmeir/laravel-adjacency-list": "^1.25",
         "symfony/http-client": "^6.4.19",
         "symfony/mailgun-mailer": "^6.4.13",
         "vinkla/hashids": "^13.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.15.2",
+        "barryvdh/laravel-debugbar": "^3.15.4",
         "brianium/paratest": "^7.8.3",
-        "laravel/pint": "^1.21.2",
-        "laravel/sail": "^1.41.0",
+        "laravel/pint": "^1.22.1",
+        "laravel/sail": "^1.42.0",
         "mockery/mockery": "^1.6.12",
         "nunomaduro/collision": "^8.8",
-        "phpunit/phpunit": "^11.5.15",
-        "predis/predis": "^2.3.0",
+        "phpunit/phpunit": "^11.5.20",
+        "predis/predis": "^2.4.0",
         "spatie/laravel-ignition": "^2.9.1"
     },
     "config": {
