feat: video throttling (#637)

--- a/.env.example
+++ b/.env.example
@@ -291,6 +291,7 @@ VIDEO_DISKS=videos_local
 VIDEO_DISK_ROOT=
 VIDEO_PATH=/video
 VIDEO_URL=
+VIDEO_RATE_LIMITER=90
 VIDEO_STREAMING_METHOD=response
 VIDEO_NGINX_REDIRECT=
 
