--- a/phpstan.neon
+++ b/phpstan.neon
@@ -52,3 +52,6 @@ parameters:
         -
             message: '#Call to method assertActionHidden\(\) on an unknown class static.#'
             path: tests/Unit/Filament/*
+        -
+            message: '#Call to method assertActionDoesNotExist\(\) on an unknown class static.#'
+            path: tests/Unit/Filament/*
