--- a/.env.example-sail
+++ b/.env.example-sail
@@ -177,6 +177,11 @@ FORTIFY_HOME=http://localhost:3000
 FORTIFY_PATH=
 FORTIFY_URL=http://localhost
 
+# graphql
+GRAPHQL_DOMAIN_NAME=
+GRAPHQL_PATH=/graphql
+GRAPHIQL_ENABLED=true
+
 # hashids
 HASHIDS_SALT_MAIN=
 HASHIDS_SALT_PLAYLISTS=
@@ -195,14 +200,6 @@ IMAGE_DISK_ROOT=
 # jetstream
 JETSTREAM_PATH=
 JETSTREAM_URL=http://localhost
-
-# lighthouse
-GRAPHQL_DOMAIN_NAME=
-GRAPHQL_PATH=/graphql
-GRAPHIQL_ENABLED=true
-LIGHTHOUSE_DEBUG=true
-LIGHTHOUSE_MAX_QUERY_COMPLEXITY=100
-LIGHTHOUSE_MAX_QUERY_DEPTH=10
 
 # logging
 LOG_CHANNEL=daily
