--- a/composer.json
+++ b/composer.json
@@ -24,24 +24,24 @@
         "ext-gd": "*",
         "ext-intl": "*",
         "ext-pdo": "*",
-        "awcodes/recently": "2.0.0-beta.1",
+        "awcodes/recently": "2.0.0",
         "babenkoivan/elastic-migrations": "^3.4.1",
         "babenkoivan/elastic-scout-driver-plus": "^4.8",
         "bepsvpt/secure-headers": "^7.5",
         "cyrildewit/eloquent-viewable": "^7.0.6",
         "fakerphp/faker": "^1.24.1",
-        "filament/filament": "^4.0.1",
+        "filament/filament": "^4.0.3",
         "flowframe/laravel-trend": ">=0.4",
         "guzzlehttp/guzzle": "^7.9.3",
         "larastan/larastan": "^3.6.0",
         "laravel-notification-channels/discord": "^1.7",
         "laravel/fortify": "^1.28.0",
-        "laravel/framework": "^12.24.0",
-        "laravel/horizon": "^5.33.2",
-        "laravel/pennant": "^1.18.1",
+        "laravel/framework": "^12.25.0",
+        "laravel/horizon": "^5.33.3",
+        "laravel/pennant": "^1.18.2",
         "laravel/pulse": "^1.4.3",
         "laravel/sanctum": "^4.2.0",
-        "laravel/scout": "^10.17.0",
+        "laravel/scout": "^10.18.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.29",
         "leandrocfe/filament-apex-charts": "4.0-beta1",
@@ -62,8 +62,8 @@
         "laravel/pint": "^1.24.0",
         "laravel/sail": "^1.44.0",
         "mockery/mockery": "^1.6.12",
-        "pestphp/pest": "3.8.2",
-        "pestphp/pest-plugin-laravel": "^3.2",
+        "pestphp/pest": "^4.0",
+        "pestphp/pest-plugin-laravel": "^4.0",
         "predis/predis": "^2.4.0",
         "spatie/laravel-ignition": "^2.9.1"
     },
