--- a/.env.example-sail
+++ b/.env.example-sail
@@ -8,6 +8,7 @@ APP_ENV=local
 APP_DEBUG=true
 DEBUGBAR_ENABLED=true
 DEBUGBAR_EDITOR=
+AUDITING_ENABLED=true
 APP_URL=http://localhost
 ASSET_URL=null
 APP_KEY=
