--- a/composer.json
+++ b/composer.json
@@ -30,21 +30,21 @@
         "bepsvpt/secure-headers": "^7.5",
         "cyrildewit/eloquent-viewable": "^7.0.6",
         "fakerphp/faker": "^1.24.1",
-        "filament/filament": "^4.0.3",
+        "filament/filament": "^4.0.4",
         "flowframe/laravel-trend": ">=0.4",
-        "guzzlehttp/guzzle": "^7.9.3",
-        "larastan/larastan": "^3.6.0",
+        "guzzlehttp/guzzle": "^7.10.0",
+        "larastan/larastan": "^3.6.1",
         "laravel-notification-channels/discord": "^1.7",
-        "laravel/fortify": "^1.28.0",
-        "laravel/framework": "^12.25.0",
-        "laravel/horizon": "^5.33.3",
+        "laravel/fortify": "^1.29.0",
+        "laravel/framework": "^12.26.2",
+        "laravel/horizon": "^5.33.4",
         "laravel/pennant": "^1.18.2",
         "laravel/pulse": "^1.4.3",
         "laravel/sanctum": "^4.2.0",
-        "laravel/scout": "^10.18.0",
+        "laravel/scout": "^10.19.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.29",
-        "leandrocfe/filament-apex-charts": "4.0-beta1",
+        "leandrocfe/filament-apex-charts": "^4.0-beta1",
         "mll-lab/graphql-php-scalars": "^6.4.1",
         "mll-lab/laravel-graphiql": "^3.3.4",
         "owen-it/laravel-auditing": "^14.0",
@@ -61,9 +61,9 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16.0",
         "laravel/pint": "^1.24.0",
-        "laravel/sail": "^1.44.0",
+        "laravel/sail": "^1.45.0",
         "mockery/mockery": "^1.6.12",
-        "pestphp/pest": "^4.0",
+        "pestphp/pest": "^4.0.3",
         "pestphp/pest-plugin-laravel": "^4.0",
         "predis/predis": "^2.4.0",
         "spatie/laravel-ignition": "^2.9.1"
