--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,14 @@
         "babenkoivan/elastic-scout-driver-plus": "^4.8",
         "bepsvpt/secure-headers": "^7.5",
         "fakerphp/faker": "^1.24.1",
-        "filament/filament": "^4.0.15",
+        "filament/filament": "^4.0.16",
         "flowframe/laravel-trend": ">=0.4",
         "guzzlehttp/guzzle": "^7.10.0",
         "larastan/larastan": "^3.7.1",
         "laravel-notification-channels/discord": "^1.7",
         "laravel/fortify": "^1.30.0",
-        "laravel/framework": "^12.28.1",
-        "laravel/horizon": "^5.33.5",
+        "laravel/framework": "^12.29.0",
+        "laravel/horizon": "^5.34.0",
         "laravel/pennant": "^1.18.2",
         "laravel/pulse": "^1.4.3",
         "laravel/sanctum": "^4.2.0",
@@ -64,8 +64,7 @@
         "mockery/mockery": "^1.6.12",
         "pestphp/pest": "^4.1.0",
         "pestphp/pest-plugin-laravel": "^4.0",
-        "predis/predis": "^2.4.0",
-        "spatie/laravel-ignition": "^2.9.1"
+        "predis/predis": "^2.4.0"
     },
     "config": {
         "optimize-autoloader": true,
