chore: bump dependencies & composer bump

--- a/composer.json
+++ b/composer.json
@@ -29,26 +29,26 @@
         "babenkoivan/elastic-scout-driver-plus": "^4.8",
         "bepsvpt/secure-headers": "^7.5",
         "fakerphp/faker": "^1.24.1",
-        "filament/filament": "^4.1.0",
+        "filament/filament": "^4.1.9",
         "flowframe/laravel-trend": ">=0.4",
         "guzzlehttp/guzzle": "^7.10.0",
         "larastan/larastan": "^3.7.2",
         "laravel-notification-channels/discord": "^1.7",
-        "laravel/fortify": "^1.30.0",
-        "laravel/framework": "^12.31.1",
-        "laravel/horizon": "^5.34.0",
-        "laravel/pennant": "^1.18.2",
+        "laravel/fortify": "^1.31.1",
+        "laravel/framework": "^12.34.0",
+        "laravel/horizon": "^5.36.0",
+        "laravel/pennant": "^1.18.3",
         "laravel/pulse": "^1.4.3",
         "laravel/sanctum": "^4.2.0",
-        "laravel/scout": "^10.19.0",
+        "laravel/scout": "^10.20.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.29",
         "leandrocfe/filament-apex-charts": "^4.0-beta1",
         "mll-lab/graphql-php-scalars": "^6.4.1",
         "mll-lab/laravel-graphiql": "^3.3.4",
         "owen-it/laravel-auditing": "^14.0",
-        "propaganistas/laravel-disposable-email": "^2.4.18",
-        "rebing/graphql-laravel": "^9.10",
+        "propaganistas/laravel-disposable-email": "^2.4.19",
+        "rebing/graphql-laravel": "^9.11",
         "spatie/db-dumper": "^3.8.0",
         "spatie/laravel-permission": "^6.21.0",
         "staudenmeir/belongs-to-through": "^2.17",
@@ -60,14 +60,14 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16.0",
-        "driftingly/rector-laravel": "^2.0",
+        "driftingly/rector-laravel": "^2.1",
         "laravel/pint": "^1.25.1",
         "laravel/sail": "^1.46.0",
         "mockery/mockery": "^1.6.12",
-        "pestphp/pest": "^4.1.0",
+        "pestphp/pest": "^4.1.2",
         "pestphp/pest-plugin-laravel": "^4.0",
         "predis/predis": "^2.4.0",
-        "rector/rector": "^2.1"
+        "rector/rector": "^2.2.3"
     },
     "config": {
         "optimize-autoloader": true,
@@ -102,6 +102,12 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
+        "setup": [
+            "composer install",
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+            "@php artisan key:generate",
+            "@php artisan db:sync"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
