--- a/composer.json
+++ b/composer.json
@@ -24,29 +24,29 @@
         "ext-gd": "*",
         "ext-intl": "*",
         "ext-pdo": "*",
-        "awcodes/recently": "2.0.0",
+        "awcodes/recently": "^2.0.0",
         "babenkoivan/elastic-migrations": "^3.4.1",
         "babenkoivan/elastic-scout-driver-plus": "^4.8",
         "bepsvpt/secure-headers": "^7.5",
         "fakerphp/faker": "^1.24.1",
-        "filament/filament": "^4.1.9",
+        "filament/filament": "^4.1.10",
         "flowframe/laravel-trend": ">=0.4",
         "guzzlehttp/guzzle": "^7.10.0",
         "larastan/larastan": "^3.7.2",
         "laravel-notification-channels/discord": "^1.7",
-        "laravel/fortify": "^1.31.1",
-        "laravel/framework": "^12.34.0",
-        "laravel/horizon": "^5.36.0",
+        "laravel/fortify": "^1.31.2",
+        "laravel/framework": "^12.35.1",
+        "laravel/horizon": "^5.37.0",
         "laravel/pennant": "^1.18.3",
         "laravel/pulse": "^1.4.3",
         "laravel/sanctum": "^4.2.0",
         "laravel/scout": "^10.20.0",
         "laravel/tinker": "^2.10.1",
-        "league/flysystem-aws-s3-v3": "^3.29",
-        "leandrocfe/filament-apex-charts": "^4.0-beta1",
+        "league/flysystem-aws-s3-v3": "^3.30.1",
+        "leandrocfe/filament-apex-charts": "^4.0.0",
         "mll-lab/graphql-php-scalars": "^6.4.1",
         "mll-lab/laravel-graphiql": "^3.3.4",
-        "owen-it/laravel-auditing": "^14.0",
+        "owen-it/laravel-auditing": "^14.0.0",
         "propaganistas/laravel-disposable-email": "^2.4.19",
         "rebing/graphql-laravel": "^9.11",
         "spatie/db-dumper": "^3.8.0",
@@ -60,14 +60,14 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16.0",
-        "driftingly/rector-laravel": "^2.1",
+        "driftingly/rector-laravel": "^2.1.1",
         "laravel/pint": "^1.25.1",
         "laravel/sail": "^1.46.0",
         "mockery/mockery": "^1.6.12",
         "pestphp/pest": "^4.1.2",
         "pestphp/pest-plugin-laravel": "^4.0",
         "predis/predis": "^2.4.0",
-        "rector/rector": "^2.2.3"
+        "rector/rector": "^2.2.5"
     },
     "config": {
         "optimize-autoloader": true,
