fix(graphql): missing rate limiting headers

--- a/.env.example-sail
+++ b/.env.example-sail
@@ -181,6 +181,7 @@ FORTIFY_URL=http://localhost
 # graphql
 GRAPHQL_DOMAIN_NAME=
 GRAPHQL_PATH=/graphql
+GRAPHQL_RATE_LIMIT=80
 GRAPHIQL_ENABLED=true
 
 # hashids
