changed env var names

--- a/.env.example-sail
+++ b/.env.example-sail
@@ -103,7 +103,7 @@ FFMPEG_BINARIES=
 FFPROBE_BINARIES=
 
 # filament
-FILAMENT_DOMAIN_NAME=
+FILAMENT_URL=
 FILAMENT_PATH=/admin
 
 # filesystems
@@ -179,7 +179,7 @@ FORTIFY_PATH=
 FORTIFY_URL=http://localhost
 
 # graphql
-GRAPHQL_DOMAIN_NAME=
+GRAPHQL_URL=
 GRAPHQL_PATH=/graphql
 GRAPHQL_RATE_LIMIT=80
 GRAPHIQL_ENABLED=true
@@ -192,7 +192,7 @@ HASHIDS_SALT_PLAYLISTS=
 BCRYPT_ROUNDS=10
 
 # horizon
-HORIZON_DOMAIN=
+HORIZON_URL=
 HORIZON_PATH=horizon
 
 # image
