--- a/.env.example
+++ b/.env.example
@@ -105,7 +105,7 @@ FFMPEG_BINARIES=
 FFPROBE_BINARIES=
 
 # filament
-FILAMENT_DOMAIN_NAME=
+FILAMENT_URL=
 FILAMENT_PATH=/admin
 
 # filesystems
@@ -181,7 +181,7 @@ FORTIFY_PATH=
 FORTIFY_URL=http://localhost
 
 # graphql
-GRAPHQL_DOMAIN_NAME=
+GRAPHQL_URL=
 GRAPHQL_PATH=/graphql
 GRAPHQL_RATE_LIMIT=80
 GRAPHIQL_ENABLED=true
@@ -194,7 +194,7 @@ HASHIDS_SALT_PLAYLISTS=
 BCRYPT_ROUNDS=10
 
 # horizon
-HORIZON_DOMAIN=
+HORIZON_URL=
 HORIZON_PATH=horizon
 
 # image
