submission panel domain

--- a/.env.example-sail
+++ b/.env.example-sail
@@ -104,7 +104,9 @@ FFPROBE_BINARIES=
 
 # filament
 FILAMENT_URL=
-FILAMENT_PATH=/admin
+FILAMENT_PATH=admin
+FILAMENT_SUBMISSION_URL=
+FILAMENT_SUBMISSION_PATH=submission
 
 # filesystems
 FILESYSTEM_DISK=local
