--- a/.env.example
+++ b/.env.example
@@ -106,7 +106,9 @@ FFPROBE_BINARIES=
 
 # filament
 FILAMENT_URL=
-FILAMENT_PATH=/admin
+FILAMENT_PATH=admin
+FILAMENT_SUBMISSION_URL=
+FILAMENT_SUBMISSION_PATH=submission
 
 # filesystems
 FILESYSTEM_DISK=local
