docs: added instalation to readme

--- a/.env.example
+++ b/.env.example
@@ -57,7 +57,7 @@ DB_HOST_READ=127.0.0.1
 DB_HOST_WRITE=127.0.0.1
 DB_STICKY=false
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=animethemes
 DB_USERNAME=root
 DB_PASSWORD=
 DB_SOCKET=
@@ -66,7 +66,7 @@ MYSQL_ATTR_SSL_CA=null
 DATABASE_BETA_URL=
 DB_BETA_HOST=
 DB_BETA_PORT=3306
-DB_BETA_DATABASE=laravel
+DB_BETA_DATABASE=animethemes-beta
 DB_BETA_USERNAME=root
 DB_BETA_PASSWORD=
 DB_BETA_SOCKET=
