--- a/.env.example-sail
+++ b/.env.example-sail
@@ -58,7 +58,7 @@ DB_HOST_READ=mysql
 DB_HOST_WRITE=mysql
 DB_STICKY=false
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=animethemes
 DB_USERNAME=sail
 DB_PASSWORD=password
 DB_SOCKET=
@@ -67,7 +67,7 @@ MYSQL_ATTR_SSL_CA=null
 DATABASE_BETA_URL=
 DB_BETA_HOST=
 DB_BETA_PORT=3306
-DB_BETA_DATABASE=laravel
+DB_BETA_DATABASE=animethemes-beta
 DB_BETA_USERNAME=root
 DB_BETA_PASSWORD=
 DB_BETA_SOCKET=
