chore: bump to filament v5

--- a/composer.json
+++ b/composer.json
@@ -24,51 +24,52 @@
         "ext-gd": "*",
         "ext-intl": "*",
         "ext-pdo": "*",
-        "awcodes/recently": "^2.0.0",
+        "awcodes/recently": "3.0",
         "babenkoivan/elastic-migrations": "^3.4.1",
         "babenkoivan/elastic-scout-driver-plus": "^4.8",
         "bepsvpt/secure-headers": "^7.5",
+        "elemind/filament-echarts": "^1.1",
         "fakerphp/faker": "^1.24.1",
-        "filament/filament": "^4.4.0",
+        "filament/filament": "5.1",
         "flowframe/laravel-trend": ">=0.4",
         "guzzlehttp/guzzle": "^7.10.0",
         "kyrch/laravel-prohibitions": "^1.1.0",
-        "larastan/larastan": "^3.8.1",
+        "larastan/larastan": "^3.9.1",
         "laravel-notification-channels/discord": "^1.7",
         "laravel/fortify": "^1.33.0",
-        "laravel/framework": "^12.44.0",
-        "laravel/horizon": "^5.41.0",
+        "laravel/framework": "^12.48.1",
+        "laravel/horizon": "^5.43.0",
         "laravel/pennant": "^1.18.5",
-        "laravel/pulse": "^1.4.7",
-        "laravel/sanctum": "^4.2.1",
+        "laravel/pulse": "^1.5.0",
+        "laravel/sanctum": "^4.2.4",
         "laravel/scout": "^10.23.0",
-        "laravel/tinker": "^2.10.2",
-        "league/flysystem-aws-s3-v3": "^3.30.1",
-        "leandrocfe/filament-apex-charts": "^4.0.0",
+        "laravel/tinker": "^2.11.0",
+        "league/flysystem-aws-s3-v3": "^3.31.0",
         "mll-lab/graphql-php-scalars": "^6.4.1",
         "mll-lab/laravel-graphiql": "^3.3.4",
         "owen-it/laravel-auditing": "^14.0.0",
-        "propaganistas/laravel-disposable-email": "^2.4.21",
+        "propaganistas/laravel-disposable-email": "^2.4.22",
         "rebing/graphql-laravel": "^9.14",
-        "spatie/db-dumper": "^3.8.2",
+        "spatie/db-dumper": "^3.8.3",
         "spatie/laravel-permission": "^6.24.0",
         "staudenmeir/belongs-to-through": "^2.17",
         "staudenmeir/eloquent-has-many-deep": "1.21.1",
         "staudenmeir/laravel-adjacency-list": "^1.25.2",
-        "symfony/http-client": "^6.4.30",
+        "symfony/http-client": "^6.4.31",
         "symfony/mailgun-mailer": "^6.4.24",
         "vinkla/hashids": "^13.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.16.3",
+        "barryvdh/laravel-debugbar": "^3.16.5",
         "driftingly/rector-laravel": "^2.1.9",
-        "laravel/pint": "^1.26.0",
-        "laravel/sail": "^1.51.0",
+        "filament/upgrade": "5.0",
+        "laravel/pint": "^1.27.0",
+        "laravel/sail": "^1.52.0",
         "mockery/mockery": "^1.6.12",
-        "pestphp/pest": "^4.3.0",
+        "pestphp/pest": "^4.3.1",
         "pestphp/pest-plugin-laravel": "^4.0",
         "predis/predis": "^2.4.1",
-        "rector/rector": "^2.3.0"
+        "rector/rector": "^2.3.4"
     },
     "config": {
         "optimize-autoloader": true,
