chore: unlock filament dependency

--- a/composer.json
+++ b/composer.json
@@ -30,19 +30,19 @@
         "bepsvpt/secure-headers": "^7.5",
         "elemind/filament-echarts": "^1.1",
         "fakerphp/faker": "^1.24.1",
-        "filament/filament": "5.1",
+        "filament/filament": "^5.1.2",
         "flowframe/laravel-trend": ">=0.4",
         "guzzlehttp/guzzle": "^7.10.0",
         "kyrch/laravel-prohibitions": "^1.1.0",
         "larastan/larastan": "^3.9.1",
         "laravel-notification-channels/discord": "^1.7",
-        "laravel/fortify": "^1.33.0",
-        "laravel/framework": "^12.48.1",
+        "laravel/fortify": "^1.34.0",
+        "laravel/framework": "^12.49.0",
         "laravel/horizon": "^5.43.0",
         "laravel/pennant": "^1.18.5",
         "laravel/pulse": "^1.5.0",
-        "laravel/sanctum": "^4.2.4",
-        "laravel/scout": "^10.23.0",
+        "laravel/sanctum": "^4.3.0",
+        "laravel/scout": "^10.23.1",
         "laravel/tinker": "^2.11.0",
         "league/flysystem-aws-s3-v3": "^3.31.0",
         "mll-lab/graphql-php-scalars": "^6.4.1",
@@ -55,7 +55,7 @@
         "staudenmeir/belongs-to-through": "^2.17",
         "staudenmeir/eloquent-has-many-deep": "1.21.1",
         "staudenmeir/laravel-adjacency-list": "^1.25.2",
-        "symfony/http-client": "^6.4.32",
+        "symfony/http-client": "^6.4.33",
         "symfony/mailgun-mailer": "^6.4.24",
         "vinkla/hashids": "^13.0"
     },
@@ -69,7 +69,7 @@
         "pestphp/pest": "^4.3.2",
         "pestphp/pest-plugin-laravel": "^4.0",
         "predis/predis": "^2.4.1",
-        "rector/rector": "^2.3.4"
+        "rector/rector": "^2.3.5"
     },
     "config": {
         "optimize-autoloader": true,
